--- a/eService.Data/eService.Data.csproj
+++ b/eService.Data/eService.Data.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IEfRepository.cs" />
+    <Compile Include="Contracts\ISaveContext.cs" />
     <Compile Include="Migrations\201801201355568_Initial.cs" />
     <Compile Include="Migrations\201801201355568_Initial.Designer.cs">
       <DependentUpon>201801201355568_Initial.cs</DependentUpon>
@@ -64,15 +66,13 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MsSqlContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EfRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\eService.Data.Models\eService.Data.Models.csproj">
       <Project>{3AA1F4A8-4464-4798-9967-23D6023889B5}</Project>
