--- a/eService.Data/eService.Data.csproj
+++ b/eService.Data/eService.Data.csproj
@@ -67,6 +67,7 @@
     <Compile Include="MsSqlContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EfRepository.cs" />
+    <Compile Include="SaveContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
