--- a/eService.Data.Models/eService.Data.Models.csproj
+++ b/eService.Data.Models/eService.Data.Models.csproj
@@ -59,8 +59,8 @@
   <ItemGroup>
     <Compile Include="Abstractions\DBEntity.cs" />
     <Compile Include="Address.cs" />
-    <Compile Include="City.cs" />
-    <Compile Include="Client.cs" />
+    <Compile Include="Town.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Contracts\IDeletable.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Order.cs" />
