--- a/.gitignore
+++ b/.gitignore
@@ -241,4 +241,4 @@ bower_components/
 coverage/
 /eService.Tests/CodeCoverage/results.xml
 /eService.Tests/CodeCoverage/TestResult.xml
-eService.Data/Migrations/
+/eService.Data/Migrations/
