--- a/eService.Services/eService.Services.csproj
+++ b/eService.Services/eService.Services.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IAddressService.cs" />
+    <Compile Include="Contracts\IHistoryService.cs" />
     <Compile Include="Contracts\ITownService.cs" />
     <Compile Include="Contracts\ICustomerService.cs" />
     <Compile Include="Contracts\IEmployeeService.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Contracts\ISupplierService.cs" />
     <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="DataServices\AddressService.cs" />
+    <Compile Include="DataServices\HistoryService.cs" />
     <Compile Include="DataServices\TownService.cs" />
     <Compile Include="DataServices\CustomerService.cs" />
     <Compile Include="DataServices\EmployeeService.cs" />
