--- a/eService.Data/eService.Data.csproj
+++ b/eService.Data/eService.Data.csproj
@@ -80,6 +80,14 @@
     <Compile Include="Migrations\201801211435214_Refactored restrictions.Designer.cs">
       <DependentUpon>201801211435214_Refactored restrictions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801221932245_Refactor DB Models.cs" />
+    <Compile Include="Migrations\201801221932245_Refactor DB Models.Designer.cs">
+      <DependentUpon>201801221932245_Refactor DB Models.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801221948598_Add History table.cs" />
+    <Compile Include="Migrations\201801221948598_Add History table.Designer.cs">
+      <DependentUpon>201801221948598_Add History table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MsSqlContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,6 +113,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801211435214_Refactored restrictions.resx">
       <DependentUpon>201801211435214_Refactored restrictions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801221932245_Refactor DB Models.resx">
+      <DependentUpon>201801221932245_Refactor DB Models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801221948598_Add History table.resx">
+      <DependentUpon>201801221948598_Add History table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
