--- a/eService.Data/eService.Data.csproj
+++ b/eService.Data/eService.Data.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\201801242059086_Refactor DB limitations.Designer.cs">
       <DependentUpon>201801242059086_Refactor DB limitations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801312000026_Remove Employee Table.cs" />
+    <Compile Include="Migrations\201801312000026_Remove Employee Table.Designer.cs">
+      <DependentUpon>201801312000026_Remove Employee Table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MsSqlContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801242059086_Refactor DB limitations.resx">
       <DependentUpon>201801242059086_Refactor DB limitations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801312000026_Remove Employee Table.resx">
+      <DependentUpon>201801312000026_Remove Employee Table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
