--- a/eService.Web/eService.Web.csproj
+++ b/eService.Web/eService.Web.csproj
@@ -305,6 +305,7 @@
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\Orders\Search.cshtml" />
+    <Content Include="Views\Orders\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
