--- a/eService.Tests/eService.Tests.csproj
+++ b/eService.Tests/eService.Tests.csproj
@@ -65,9 +65,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebTests\ViewModelsTests\Orders\OrderViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ServicesTests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\eService.Web\eService.Web.csproj">
+      <Project>{5780295D-9AF2-400F-AB07-8D5D76B9A413}</Project>
+      <Name>eService.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
