--- a/eService.Tests/packages.config
+++ b/eService.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
   <package id="OpenCover" version="4.6.519" targetFramework="net461" />
+  <package id="ReportGenerator" version="3.1.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
